# cpp-tamagotchi

./: CMakeLists.txt  main.cpp
screens/: menagerie.cpp  onboarding.cpp  onboarding.hpp  pet-shop.cpp  pet-shop.hpp
